--- a/SOURCE/app/src/main/AndroidManifest.xml
+++ b/SOURCE/app/src/main/AndroidManifest.xml
@@ -11,21 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ViewController.Batch.AddBatchActivity"></activity>
+        <activity android:name=".ViewController.Base.SelectActivity" />
         <activity android:name=".SplashActivity">
-
-        </activity>
-        <activity android:name=".LoginActivity">
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
